--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,17 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link
+      <meta name="description" content="Masofaviy ta'lim platformasi">
+      <meta name="keywords" content="lms, moodule, LMS">
+      <meta name="author" content="SmartSoftware">
+      <meta name="robots" content="index, follow">
+      <meta property="og:title" content="Moliya instituti LMS MOODLE tizimi">
+      <meta property="og:description" content="Description of Your Page">
+      <meta property="og:image" content="URL to an Image">
+      <meta property="og:url" content="fastlms.uz">
+      <meta http-equiv="Permissions-Policy" content="camera=*, microphone=*, geolocation=*">
+
+      <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
