--- a/public/index.html
+++ b/public/index.html
@@ -136,6 +136,7 @@
 
 <script defer src="<%= BASE_URL %>katex/scripts.js"></script>
 <script defer src="<%= BASE_URL %>katex/autorender.js"></script>
+<script src="./dist/vue-core-vide-player.umd.min.js"></script>
 <!--<script type="text/javascript" src="<%= BASE_URL %>app-assets/js/scripts/pages/dashboard-analytics.js"></script>-->
 </body>
 </html>
